# hirundo-client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  COPY on_prem_audio_ar_test_notebook.ipynb  DEV_README.md  Dockerfile  LICENSE  README.md  conftest.py  create-requirements.py  dev-environment.yml  dev-requirements.txt  dev.Dockerfile  docs-requirements.txt  environment.yml  jupyter.Dockerfile  on_prem_audio_ar_test_notebook.ipynb  on_prem_audio_he_small_test_notebook.ipynb  on_prem_audio_he_test_notebook.ipynb  on_prem_audio_sanity_test_notebook.ipynb  on_prem_audio_test_notebook.ipynb  on_prem_test_notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODEOWNERS  event_cleanup_test.json
.github/workflows/: cleanup-test-artifacts.yaml  create-release.yaml  deploy-docker-image.yaml  deploy-to-pypi.yaml  lint.yaml  pytest-full.yaml  pytest-sanity.yaml  pytest.yaml  pytest.yml  ruff.yaml  safety-scan.yml  update-docs.yaml  vulnerability-scan.yml
act-events/: README.md  pr.json
docs/: .dockerignore  Makefile  conf.py  docs.yaml  hirundo.cli.rst  hirundo.dataset_optimization.rst  hirundo.enum.rst  hirundo.git.rst  hirundo.rst  hirundo.storage.rst  hirundo.timeouts.rst  index.rst  modules.rst
docs/_static/: open-sidebar.js
docs/_templates/: github-pages-redirect.html
docs/_templates/sidebar/: versions.html
hirundo/: __init__.py  _constraints.py  _dataframe.py  _env.py  _headers.py  _http.py  _iter_sse_retrying.py  _timeouts.py  _urls.py  cli.py  constraints.py  dataset_enum.py  dataset_optimization.py  dataset_optimization_results.py  dataset_qa.py  dataset_qa_results.py  enum.py  env.py  git.py  headers.py  iter_sse_retrying.py  labeling.py  logger.py  pyproject.toml  storage.py  timeouts.py  unlearning.py  unlearning_llm_behavior.py  unzip.py
notebooks/: Cancel_Dataset_Optimization_Run.ipynb  Cancel_Dataset_QA_Run.ipynb  Create_BDD100k_dataset_AWS_S3.ipynb  Create_BDD100k_dataset_HuggingFace.ipynb  Create_cifar100_dataset_GCP.ipynb  Hirundo_Dataset_Optimization_HuggingFace.ipynb  Hirundo_Dataset_Optimization_S3.ipynb  Hirundo_QA_Dataset_HuggingFace.ipynb
on-prem/: on_prem_audio_ar_test_notebook.ipynb  on_prem_audio_he_small_test_notebook.ipynb  on_prem_audio_he_test_notebook.ipynb  on_prem_audio_sanity_test_notebook.ipynb  on_prem_test_notebook.ipynb
requirements/: dev.txt  docs.txt  pandas-requirements.txt  pandas.txt  polars.txt  requirements.txt
scripts/: cleanup_test_artifacts.py
tests/: aws_sanity_test.py  dataset_optimization_shared.py  dataset_qa_shared.py  gcp_sanity_test.py  get_by_name_test.py  sanity_shared.py  sanity_test.py
tests/classification/: aws_sanity_test.py  cifar100_classes.py  classification_aws_test.py  classification_gcp_test.py  sanity_gcp_test.py
tests/object-detection/: aws_sanity_test.py  od_aws_test.py  od_git_test.py  rockpaperscisssors_yolo_test.py  sama_coco_test.py  sanity_aws_test.py
tests/speech-to-text/: sanity_stt_git_test.py  stt_git_test.py
