[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hirundo"]

[project]
name = "hirundo"
version = "0.1.8"
description = "This package is used to interface with Hirundo's platform. It provides a simple API to optimize your ML datasets."
authors = [{ name = "Hirundo", email = "dev@hirundo.io" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "dataset",
    "machine learning",
    "data science",
    "data engineering",
]
requires-python = ">= 3.9"
dependencies = [
    "pyyaml>=6.0.1",
    "types-PyYAML>=6.0.12",
    "pydantic>=2.7.1",
    "twine>=5.0.0",
    "python-dotenv>=1.0.1",
    "types-requests>=2.31.0",
    "typer>=0.12.3",
    "httpx>=0.27.0",
    "stamina>=24.2.0",
    "httpx-sse>=0.4.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.5",
]

[project.scripts]
hirundo = "hirundo.cli:app"

[project.urls]
Homepage = "https://github.com/Hirundo-io/hirundo-client"

[project.optional-dependencies]
dev = [
    "pyyaml>=6.0.1",
    "types-PyYAML>=6.0.12",
    "pydantic>=2.7.1",
    "twine>=5.0.0",
    "python-dotenv>=1.0.1",
    "types-requests>=2.31.0",
    "types-setuptools>=69.5.0",
    "typer>=0.12.3",
    "httpx>=0.27.0",
    "stamina>=24.2.0",
    "httpx-sse>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "uv",
    "pre-commit>=3.7.1",
    "ruff==0.6.5",
    "bumpver",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.4.16",
    # ⬆️ Currently doesn't support Python 3.9: https://github.com/sphinx-doc/sphinx-autobuild/pull/157
    # As such, keeping it, but will not use it until the new version is released.
    "sphinx-click>=5.0.1",
    "autodoc_pydantic>=2.2.0",
    "furo",
    "sphinx-multiversion",
]

[tool.bumpver]
current_version = "0.1.3b1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"$',
]
"hirundo/__init__.py" = [
    '^__version__ = "{version}"$',
]
"docs/_templates/github-pages-redirect.html" = [
    """<meta http-equiv="refresh" content="0; url=./v{version}/index.html" />""",
    """<link rel="canonical" href="https://hirundo-io.github.io/hirundo/v{version}/index.html" />$"""
]

[tool.ruff]
src = ["hirundo"]
include = ["pyproject.toml", "hirundo/**/*.py", "tests/**/*.py", "notebooks/**/*.ipynb"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",               # This is the default
    ".micromamba",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "C901",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "TID",
    "TCH",
    "NPY",
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Disable fix for unused imports possibly needed for export.
unfixable = ["F401"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
"notebooks/**/*.ipynb" = ["S324"]
